# simple-notepad-project

./: CMakeLists.txt  Notepad.md  format_manager.cpp  format_manager.h  line_number.cpp  line_number.h  main.cpp  main_window.cpp  main_window.h  notepad_exception.h  print_manager.cpp  print_manager.h  recent_file_manager.cpp  recent_file_manager.h  spell_checker.cpp  spell_checker.h  spell_checker_highlighter.cpp  spell_checker_highlighter.h  text_transform.h
